--- a/TravelRecordApp.Android/TravelRecordApp.Android.csproj
+++ b/TravelRecordApp.Android/TravelRecordApp.Android.csproj
@@ -61,6 +61,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1821" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.0" />
+    <PackageReference Include="Xamarin.Forms.Maps">
+      <Version>4.8.0.1821</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
