--- a/TravelRecordApp.iOS/TravelRecordApp.iOS.csproj
+++ b/TravelRecordApp.iOS/TravelRecordApp.iOS.csproj
@@ -131,6 +131,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1821" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.0" />
+    <PackageReference Include="Xamarin.Forms.Maps">
+      <Version>4.8.0.1821</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
