--- a/TravelRecordApp.Android/TravelRecordApp.Android.csproj
+++ b/TravelRecordApp.Android/TravelRecordApp.Android.csproj
@@ -62,6 +62,9 @@
     <PackageReference Include="System.Linq">
       <Version>4.3.0</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.Geolocator">
+      <Version>4.5.0.6</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1821" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.0" />
     <PackageReference Include="Xamarin.Forms.Maps">
